--- a/AmingHelper/manifest.json
+++ b/AmingHelper/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "AMing,自写自用",
-  "version": "1.0.0.1",
+  "version": "1.0.0.2",
   "description": "自写自用，有爱自取.",
   "background": {
-    "scripts": ["js/bg.js"]
+    "scripts": ["js/bg/helper.js", "js/bg/initdata.js", "js/bg/background.js"]
   },
   "browser_action": {
     "name": "AMing"
@@ -17,7 +17,7 @@
   },
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
-    "js": ["js/jquery.js", "js/jquery.easing.1.3.js", "js/jquery.aming.nav.js", "js/content.js", "js/baiduEx.js"],
+    "js": ["js/core/jquery.js", "js/core/jquery.easing.1.3.js", "js/core/jquery.aming.nav.js", "js/cs/content.js", "js/cs/baidu.js"],
     "all_frames": true
   }],
   "manifest_version": 2,
